[package]
name = "halo2-zkcert"
version = "0.1.0"
edition = "2021"
authors = ["richardliang", "0xSachinK"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = "0.10.6"
rand = "0.8.5"
rsa = { version = "0.6.1", features = ["serde"] }
halo2-rsa = { branch = "develop", default-features = false, features = [
    "halo2-axiom",
    "display"
], git = "https://github.com/zkpdf/halo2-rsa.git"}
halo2-base = { branch = "develop", default-features = false, features = [
    "halo2-axiom",
    "display",
    "test-utils"
], git = "https://github.com/axiom-crypto/halo2-lib.git"}
halo2-sha256-unoptimized = { branch = "develop", default-features = false, features = [
    "halo2-axiom",
    "display",
], git = "https://github.com/zkpdf/halo2-sha256-unoptimized.git"}
snark-verifier-sdk = { branch = "develop", default-features = false, features = [
    "halo2-axiom",
    "display",
    "loader_halo2"
], git = "https://github.com/axiom-crypto/snark-verifier.git"}
x509-parser = { version = "0.15", features= ["verify"] }
openssl = "0.10"
num-traits = "0.2.15"
env_logger = "0.10.0"
itertools = "0.10.3"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4"

[features]
default = ["halo2-axiom", "display"]
display = ["halo2-base/display"]
halo2-pse = ["halo2-base/halo2-pse"]
halo2-axiom = ["halo2-base/halo2-axiom"]